Fixed nav spacing

--- a/css/main.css
+++ b/css/main.css
@@ -169,6 +169,10 @@ textarea {
     margin: 0;
   }
 
+  header .content-wrapper ul {
+    padding: 0px;
+  }
+
   header figure {
     width: 60%;
     display: flex;
